@@ -1,7 +1,7 @@
 # Contributor: M Rawash <mrawash _stange_curved_character_ gmail D0T com>
 # Maintainer: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 pkgname=freedroidrpg-svn
-pkgver=5245
+pkgver=5366
 pkgrel=1
 pkgdesc="A science fiction role playing game which tells the story of a world destroyed by a conflict between robots and their human masters - development version"
 url="http://www.freedroid.org"
@@ -13,13 +13,13 @@ makedepends=('subversion' 'python')
 optdepends=('mesa: to run the game in opengl mode')
 conflicts=('freedroidrpg')
 replaces=('freedroidrpg')
-changelog=('changelog')
+changelog=changelog
 source=("http://buildbot.freedroid.org/logo.png"
         "freedroidrpg.desktop"
         "changelog")
 sha1sums=('4a9b3ffadae7367c0f30025370cb7d27ba38fcc1'
           '463708161658e15aa555de14ef18ea1fcc0a2758'
-          'a63aec0c757a8f7c72186b97ffc62935536793b2')
+          '6171ad23105a71be1aa6a63e827cd33012ab83d1')
 
 _svntrunk=https://freedroid.svn.sourceforge.net/svnroot/freedroid
 _svnmod=freedroid
