@@ -2,17 +2,17 @@
 # Maintainer: Emiliano Vavassori <syntaxerrormmm(at)gmail.com>
 pkgname=ruby-rspec-rails
 _gemname=rspec-rails
-pkgver=2.6.1
+pkgver=2.8.0
 pkgrel=1
 pkgdesc="RSpec-2 for Rails-3"
 arch=(any)
 url="http://github.com/rspec/rspec-rails"
 license=('MIT')
 depends=('ruby' "ruby-rspec>=${pkgver}" 'ruby-railties>=3.0' 'ruby-actionpack>=3.0' 'ruby-activesupport>=3.0')
-makedepends=('rubygems')
+makedepends=('ruby')
 source=(http://rubygems.org/downloads/${_gemname}-${pkgver}.gem)
 noextract=(${_gemname}-${pkgver}.gem)
-md5sums=('ae4f9a9ebda9456b57fe47292d6debea')
+md5sums=('356d6e655da5dc9d69374c4c7fe730f2')
 
 package() {
   cd $srcdir
