@@ -3,13 +3,13 @@
 pkgname=vdrsymbols-ttf
 _pkg_source_dir=vdrsymbols
 pkgver=20100612
-pkgrel=1
+pkgrel=2
 arch=('any')
 pkgdesc="A TrueType font that includes the symbols used by some VDR plugins and patches"
 url="http://andreas.vdr-developer.org/fonts/"
 license=('custom')
 depends=('xorg-font-utils')
-install=('vdrsymbols-ttf.install')
+install=vdrsymbols-ttf.install
 source=(http://andreas.vdr-developer.org/fonts/download/${pkgname}-${pkgver}.tgz)
 md5sums=('dad98a1cdb2b7deb3301ecf46181d258')
 
