@@ -1,3 +1,6 @@
+Version 5366-1
+ * Bump pkgversion to 5366
+ * Fix PKGBUILD changelog line
 Version 5245-1
  * Version bump since FreedroidRPG 0.15 has been released
 Version 5243-1
